<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) OS2 2016.
  ~
  ~ This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0.
  ~ If a copy of the MPL was not distributed with this file, You can obtain one at http://mozilla.org/MPL/2.0/
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_login_username_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/user_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/user_login_username_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_login_password_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/user_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/user_login_password_hint"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_login_button_text"
            android:id="@+id/user_login_button"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#fff"
            android:background="#DB813C"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/user_login_help_text"/>

        <TextView
            android:id="@+id/user_login_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#BABABA"
            android:gravity="right"
            tools:text="Version 1.0.98"/>

    </LinearLayout>

</ScrollView>
