<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) OS2 2016.
  ~
  ~ This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0.
  ~ If a copy of the MPL was not distributed with this file, You can obtain one at http://mozilla.org/MPL/2.0/
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Dato: dd/MM-YY"
            android:id="@+id/after_tracking_view_date_label"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Bruger: swag jensen"
            android:id="@+id/after_tracking_view_user_label"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginBottom="10dp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:id="@+id/imageView4"
            android:background="#b4b4b4" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/after_tracking_view_purpose">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purpose_title"
                android:id="@+id/textView2"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purpose_subtitle"
                android:id="@+id/after_tracking_view_purpose_desc"
                android:layout_below="@+id/textView2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:textColor="#000" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="fill_parent"
                android:id="@+id/imageView3"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:id="@+id/imageView10"
            android:background="#b4b4b4" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/after_tracking_view_org_location">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/employments_title"
                android:id="@+id/textView4"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/employments_subtitle"
                android:id="@+id/after_tracking_view_org_location_desc"
                android:layout_below="@+id/textView4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:textColor="#000" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="fill_parent"
                android:id="@+id/imageView"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:id="@+id/imageView9"
            android:background="#b4b4b4" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/after_tracking_view_rate">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rates_title"
                android:id="@+id/textView6"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rates_subtitle"
                android:id="@+id/after_tracking_view_rate_desc"
                android:layout_below="@+id/textView6"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:textColor="#000" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="fill_parent"
                android:id="@+id/imageView6"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:id="@+id/imageView8"
            android:background="#b4b4b4" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/after_tracking_view_extra_desc">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments_title"
                android:id="@+id/textView8"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments_subtitle"
                android:id="@+id/after_tracking_view_extra_desc_desc"
                android:layout_below="@+id/textView8"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:textColor="#000" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="fill_parent"
                android:id="@+id/imageView7"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:id="@+id/imageView5"
            android:background="#b4b4b4" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/after_tracking_view_km_container" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_distance_title"
                android:id="@+id/textView"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="x.y km"
                android:id="@+id/after_tracking_view_km_container_desc"
                android:layout_below="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:textColor="#000" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="fill_parent"
                android:id="@+id/imageView13"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:id="@+id/imageView14"
            android:background="#b4b4b4" />

        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_home_title"
            android:id="@+id/after_tracking_view_start_at_home"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="#000" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:id="@+id/imageView12"
            android:background="#b4b4b4" />

        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_home_title"
            android:id="@+id/after_tracking_view_ended_at_home"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="#000" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:id="@+id/imageView2"
            android:background="#b4b4b4" />

        <LinearLayout
            android:id="@+id/after_tracking_view_using_fourkm_rule_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_fourkm_title"
                android:id="@+id/after_tracking_view_using_fourkm_rule"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="#000" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:id="@+id/after_tracking_view_using_fourkm_rule_divider"
                android:background="#b4b4b4" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/after_tracking_view_hometoborderdistance_container" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hometoborderdistance_title"
                android:id="@+id/after_tracking_view_hometoborderdistance_textview"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="x.y km"
                android:id="@+id/after_tracking_view_hometoborderdistance_textview_2"
                android:layout_below="@+id/after_tracking_view_hometoborderdistance_textview"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:textColor="#000" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="fill_parent"
                android:id="@+id/after_tracking_view_hometoborderdistance_imageview"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/arrow_right" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:id="@+id/after_tracking_view_hometoborderdistance_divider"
                android:background="#b4b4b4" />
        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/after_tacking_cancel_button_title"
                android:id="@+id/after_tracking_view_cancel_btn"
                android:textColor="#DB813C"
                android:background="#fff"
                android:textAllCaps="false"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/after_tacking_accept_button_title"
                android:id="@+id/after_tracking_view_send_btn"
                android:textColor="#fff"
                android:background="#DB813C"
                android:textAllCaps="false"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>